objects/Section__c.object
<CustomObject>
    <fields>
        <fullName>ACM_deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if an americorps member has been deployed in this classroom. To identify sections where we need student assignment and grade data for districts, we need to identify which classrooms City Year will be working with. This field marks the classrooms CY will be working with.</description>
        <inlineHelpText>For schools receiving whole-class data feeds only</inlineHelpText>
        <label>ACM deployed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What intervention Program is this intervention Section associated to?</inlineHelpText>
        <label>School Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account_Program__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Program__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the section is a currently active section</description>
        <inlineHelpText>Check this box if the section is a currently active section</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <formula>Program__r.Additional_Information__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Information about the intervention Program</inlineHelpText>
        <label>Additional Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this section an Advisory?</inlineHelpText>
        <label>Advisory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Grades__c</fullName>
        <inlineHelpText>Select the grade(s) for which the section is available. SchoolForce uses this field to determine the available sectons into which you can schedule a student when you use the Section Wizard.</inlineHelpText>
        <label>All Grades</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Name__c</fullName>
        <formula>Program__r.Name+ &quot; - &quot; + LEFT(Intervention_Primary_Staff__r.First_Name_Staff__c , 1) +  Intervention_Primary_Staff__r.Staff_Last_Name__c + &quot; - &quot; + System_Auto_Number__c</formula>
        <inlineHelpText>This name is created using the Program Name, the Primary Point person, and an automatically generated number. This field cannot be modified here.</inlineHelpText>
        <label>Intervention Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <label>Available Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Grade_Levels__c</fullName>
        <description>Used for &quot;Mass Create Sections&quot; button</description>
        <label>Available Grade Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Section_Grade__c</fullName>
        <formula>Total_Average_Grade__c /  of_Students__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The real-time average section grade for all students in this section. Ex: The average section grade is 86%.</inlineHelpText>
        <label>Average Section Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Class_Organization__c</fullName>
        <description>The structure in which class instruction is arranged.</description>
        <inlineHelpText>The structure in which class instruction is arranged.</inlineHelpText>
        <label>Class Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pull-Out Class</fullName>
                </value>
                <value>
                    <fullName>Self-Contained Class (Special Education)</fullName>
                </value>
                <value>
                    <fullName>Departmentalized Instruction</fullName>
                </value>
                <value>
                    <fullName>Self-Contained Class</fullName>
                </value>
                <value>
                    <fullName>Elementary Enrichment Class</fullName>
                </value>
                <value>
                    <fullName>Team-Taught Class</fullName>
                </value>
                <value>
                    <fullName>Ability Group Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Pace__c</fullName>
        <label>Class Pace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlled Pace</fullName>
                </value>
                <value>
                    <fullName>Self-paced</fullName>
                </value>
                <value>
                    <fullName>Combination of self-paced and control paced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>Select the color you want to display for this section in the Scheduled Sections grid. This color only appears on the schedule grid and is meant to help you differentiate between sections.</inlineHelpText>
        <label>Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When section has been marked competed for all reporting periods it meets for this flag will be checked.</description>
        <inlineHelpText>When section has been marked competed for all reporting periods it meets for this flag will be checked.</inlineHelpText>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Class__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Core Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Name_Spanish__c</fullName>
        <formula>Course__r.Name_Spanish__c</formula>
        <label>Course Name Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the course associated to the section you want to create.</inlineHelpText>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked if this section is recording daily attendance rather than sectional attendance.</description>
        <inlineHelpText>Select if staff members will take daily attendance in this section. The section will display in the All Day grid and you will not be able to add it to a specific period in your schedule. You must also select the Record Attendance check box.</inlineHelpText>
        <label>Daily Attendance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a description of the section. This field only displays in the Description field on the Section record. You can use it on reports.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>When does the Intervention Section end?</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_GPA__c</fullName>
        <label>Exclude From GPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same as Course</fullName>
                </value>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_From_Storing_Final_Grades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Storing Final Grades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failing__c</fullName>
        <inlineHelpText># of Failing Students in the section based on the school&apos;s passing grade threshold</inlineHelpText>
        <label># Failing</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <inlineHelpText>Select the grade level of the course, if desired. SchoolForce uses the All Grades list box to determine the grade level(s) for which the section is available. You can use the Grade Level drop-down list on reports.</inlineHelpText>
        <label>Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Scale__c</fullName>
        <label>Grade Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same as Course</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>ELH 1-2-3-4 Rubric</fullName>
                </value>
                <value>
                    <fullName>4ELH 1-2-3-4 Rubric TENTHS</fullName>
                </value>
                <value>
                    <fullName>ELH Traditional</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Homework__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this section will have homework and should be included on the homework tracker list</description>
        <inlineHelpText>Select if you want to make this section available in the Homework module.</inlineHelpText>
        <label>Has Homework</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Homeroom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if this section is Home Room</inlineHelpText>
        <label>Homeroom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homework_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homework Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_After_School__c</fullName>
        <inlineHelpText>Is this Intervention Section considered in school or extended learning?</inlineHelpText>
        <label>In School/Extended Learning/Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In School</fullName>
                </value>
                <value>
                    <fullName>Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Curriculum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_Area__c</fullName>
        <formula>Program__r.Indicator_Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What Indicator Area is this Program addressing? This field cannot be modified here.</inlineHelpText>
        <label>Indicator Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Primary_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the primary staff member associated with this Intervention Section?</inlineHelpText>
        <label>Intervention Primary Staff</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Intervention Primary Staff does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.School__c</field>
                <operation>equals</operation>
                <valueField>Staff__c.Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Intervention Sections</relationshipLabel>
        <relationshipName>Intervention_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intervention_Section_Number__c</fullName>
        <description>Just the Intervention Section number</description>
        <formula>Trim(Right(System_Auto_Number__c,Len(System_Auto_Number__c)-10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Truncated Intervention System Auto Number</inlineHelpText>
        <label>Intervention Section Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT(School__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEP_Session_Type__c</fullName>
        <label>MEP Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular School Year (Services provided during the school day only)</fullName>
                </value>
                <value>
                    <fullName>Regular School Year (Some or all services provided during an extended Day/week)</fullName>
                </value>
                <value>
                    <fullName>Year round project (Services provided throughout the regular school year and summer/intersession terms)</fullName>
                </value>
                <value>
                    <fullName>Summer Term or Intersession for Instructional or Support Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_of_Seats__c</fullName>
        <label>Maximum # of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_of_Instruction__c</fullName>
        <label>Medium of Instruction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Correspondence instruction</fullName>
                </value>
                <value>
                    <fullName>Face-to-face instruction</fullName>
                </value>
                <value>
                    <fullName>Virtual/On-line</fullName>
                </value>
                <value>
                    <fullName>Center-based instruction</fullName>
                </value>
                <value>
                    <fullName>Independent study</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Spanish__c</fullName>
        <description>The section name in Spanish language.</description>
        <inlineHelpText>Enter the Spanish translation for the section name. This field only displays in the Name in Spanish field on the Section record. You can use it on reports. The Name in Spanish field on the Course displays on report cards/progress reports.</inlineHelpText>
        <label>Name in Spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you do not want to schedule this section for a specific period. The section will display in the All Day grid.</inlineHelpText>
        <label>No Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Add any additional Notes that would be helpful for a person reviewing this Section to see</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods__c</fullName>
        <inlineHelpText>Select the number of periods over which you will schedule the section. SchoolForce will create a section square for the number of periods you select, enabling you to add the section to the schedule for multiple periods.</inlineHelpText>
        <label>Number of Periods</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Reporting_Periods__c</fullName>
        <inlineHelpText>Select the number of reporting periods this section meets. SchoolForce will create a section square in each reporting period for the number you select. A grade weighting must be set up in the course for the selected number of reporting periods.</inlineHelpText>
        <label>Number of Reporting Periods</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Staff__c</fullName>
        <description>Primarily for Scheduler, enter number of teachers for period based to allow dragging to multiple cells.</description>
        <inlineHelpText>Select the number of staff members who will teach this section. SchoolForce will create a section square for the number of staff members you select, enabling you to schedule the section for multiple teachers.</inlineHelpText>
        <label>Number of Staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Present__c</fullName>
        <formula>IF(Total_Attendance__c!=0, (Present_Attendance__c / Total_Attendance__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total percentage of present students in this section.  Ex: This section has an 80% present attendance rate.</inlineHelpText>
        <label>% Present</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Attendance__c</fullName>
        <label>Present Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What intervention Program is this Intervention Section for?</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Time_per_Session__c</fullName>
        <formula>Program__r.Recommended_Time_per_Session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recommended amount of time (in min) that each meeting, or session, of this Intervention should take. For example, if Program A is most effective with instructional segments of 20 minutes each then 20 minutes is the Recommended Time per Session.</inlineHelpText>
        <label>Recommended Time per Session (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Weekly_Frequency__c</fullName>
        <formula>TEXT(Program__r.Recommended_Weekly_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recommended frequency that this intervention Section should meet in order to be effective.</inlineHelpText>
        <label>Recommended Weekly Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should attendance be recorded for this section?</description>
        <inlineHelpText>Leave this check box selected if staff members will take daily or sectional attendance in this section. This field determines whether or not this section is available in the Attendance Wizard.</inlineHelpText>
        <label>Record Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <description>Maps to a valid reporting period based on the year and school</description>
        <label>Reporting Period Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Parent__c</fullName>
        <formula>CASESAFEID(Reporting_Period__r.Parent_Time_Element__c)</formula>
        <label>Reporting Period Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Usually the only reporting period; could be the first if the section spans multiple reporting periods.</description>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Sections (First Reporting Period)</relationshipLabel>
        <relationshipName>Sections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Periods_NotCompleted__c</fullName>
        <label>Reporting Periods NotCompleted</label>
        <summaryFilterItems>
            <field>Section_ReportingPeriod__c.Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Section_ReportingPeriod__c.Is_Time_Parent_Term__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Section_ReportingPeriod__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Group_Name_Spanish__c</fullName>
        <formula>Schedule_Group__r.Name_Spanish__c</formula>
        <label>Schedule Group Name Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Group_Name__c</fullName>
        <formula>Schedule_Group__r.Name</formula>
        <label>Schedule Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Schedule Group related to this section</description>
        <label>Schedule Group</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Sections (Schedule Group)</relationshipLabel>
        <relationshipName>Schedule_Group_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduler_Reference_Id__c</fullName>
        <description>referenced by Scheduled Section; may have multiple records with different times based on Template</description>
        <label>Scheduler Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section_Exit_Date__c</fullName>
        <label>Section Exit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Section_Exit_Reason__c</fullName>
        <label>Section Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SS_Exit_Reason</valueSetName>
        </valueSet>
    </fields>
</CustomObject>